Fix: se implementaron las pruebas de sonarqube con sus respectivas correcciones